discussion/kv_engine/169495/169495_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49469: Introduce CheckpointManager::Counter::memFreedByExpel

Change-Id: I2846833f9a7fec99966a05f9ed0190f045e23f59

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-26 15:21:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-26 16:01:13.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15153/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26: error: type "CheckpointManager::Counter" does not provide a call operator [clang-diagnostic-error]
                         memFreedByExpel(stats.memFreedByCheckpointItemExpel)) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41: error: no member named "Counter" in "Checkpoint" [clang-diagnostic-error]
CheckpointManager::Counter& Checkpoint::Counter::operator-=(size_t size) {
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15153/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15153/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43328/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(50): error C2064: term does not evaluate to a function taking 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43328/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36604/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16852/ : FAILURE

Compile error at [2022-01-26T15:56:36.610Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:77:
error: no match for call to ?(CheckpointManager::Counter) (EPStats::Counter&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16852/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17167/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17925/ : FAILURE

Compile error at [2022-01-26T15:56:49.049Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17925/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25267/ : FAILURE

Compile error at [2022-01-26T15:57:01.263Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25267/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4863/ : FAILURE

Compile error at [2022-01-26T15:35:02.251Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@4/kv_engine/engines/ep/src/checkpoint_manager.cc:50:77:
error: no match for call to ?(CheckpointManager::Counter) (EPStats::Counter&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15966/ : FAILURE

Compile error at [2022-01-26T15:38:19.707Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@6/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4802/ : FAILURE

Compile error at [2022-01-26T15:59:32.745Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:50:26:
error: type "CheckpointManager::Counter" does not provide a call operator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4802/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13997/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
